; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan.c_kasan_poison_active.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan.c_kasan_poison_active.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_POISON_GLOBAL = common dso_local global i32 0, align 4
@TYPE_POISON_HEAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @kasan_poison_active to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kasan_poison_active(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %11 [
    i32 132, label %5
    i32 128, label %8
    i32 130, label %8
    i32 129, label %8
    i32 131, label %8
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @TYPE_POISON_GLOBAL, align 4
  %7 = call i32 @kasan_check_enabled(i32 %6)
  store i32 %7, i32* %2, align 4
  br label %12

8:                                                ; preds = %1, %1, %1, %1
  %9 = load i32, i32* @TYPE_POISON_HEAP, align 4
  %10 = call i32 @kasan_check_enabled(i32 %9)
  store i32 %10, i32* %2, align 4
  br label %12

11:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %12

12:                                               ; preds = %11, %8, %5
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @kasan_check_enabled(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
